@@ -1,5 +1,16 @@
 2017-07-07  John Baldwin  <jhb@FreeBSD.org>
 
+	* corelow.c (get_core_siginfo): Remove.
+	(core_xfer_partial): Use the gdbarch "core_xfer_siginfo" method
+	instead of get_core_siginfo.
+	* gdbarch.sh (core_xfer_siginfo): New gdbarch callback.
+	* gdbarch.h: Re-generate.
+	* gdbarch.c: Re-generate.
+	* linux-tdep.c (linux_core_xfer_siginfo): New.
+	(linux_init_abi): Install gdbarch "core_xfer_siginfo" method.
+
+2017-07-07  John Baldwin  <jhb@FreeBSD.org>
+
 	* corelow.c (thread_section_name): Move to ...
 	* gdbcore.h (thread_section_name): ... here.
 
